// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Calculator should render 1`] = `
<Calculator__StyledLoadingIndicator>
  <WasmLoader
    onError={[Function]}
    onLoad={[Function]}
  />
  <LoadingIndicator
    getRandomInt={[Function]}
  />
</Calculator__StyledLoadingIndicator>
`;

exports[`Calculator should render form after WasmLoader called init method 1`] = `
<div>
  <DilationForm
    disabled={false}
    onSubmit={[Function]}
  />
  <withAnimatedContentChange(Result)
    dilation={null}
    fatalError={false}
    validationError={false}
  />
</div>
`;

exports[`Calculator should render with fatalError when WasmLoader calls onError 1`] = `
<div>
  <DilationForm
    disabled={false}
    onSubmit={[Function]}
  />
  <withAnimatedContentChange(Result)
    dilation={null}
    fatalError={true}
    validationError={false}
  />
</div>
`;
